--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.2.3",
+    "google-libphonenumber": "^3.2.32",
+    "intl-tel-input": "^17.0.3",
     "rxjs": "~7.8.0",
     "svg-country-flags": "^1.2.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.2",
+    "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.2",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
