--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ngrx/store": "^15.4.0",
     "bootstrap": "^5.2.3",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
