--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.8",
+    "@angular/material-moment-adapter": "^15.2.8",
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
@@ -30,6 +31,7 @@
     "intl-tel-input": "^17.0.3",
     "json-server": "^0.17.3",
     "json-server-auth": "^2.1.0",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "svg-country-flags": "^1.2.10",
     "tslib": "^2.3.0",
